--- a/TODO.txt
+++ b/TODO.txt
@@ -2,4 +2,4 @@
 Добавить флаг работы в фоне без отрисовки самой таблицы
 Сделать информационное окно (вывод времени последнего обновления и результатов анализа таблицы)
 Устранить: "[Violation] 'setTimeout' handler took 102ms"
-Модифицировать столбцы талбицы (добавить время, имя владельца, ...)
+Модифицировать столбцы талбицы (добавить время, имя владельца, возможность спаривания)
